# git-hud

./: .gitignore  Cargo.toml  README.md  example-output.txt
src/: cache.rs  display.rs  error.rs  git.rs  log.rs  main.rs  strings.rs  summary.rs
