[package]
name = "git-hud"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
git2 = "0.18"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
thiserror = "1.0"
colored = "2.0"
async-trait = "0.1"