[package]
name = "git-hud"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "git status++"
repository = "https://github.com/howinator/git-hud"
readme = "README.md"

[dependencies]
anyhow = "1.0"
git2 = "0.19.0"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
thiserror = "1.0"
colored = "2.0"
async-trait = "0.1"
futures = "0.3.31"
